# sparks

./: .gitignore  README.MD  pyproject.toml
conda/: meta.yaml
sparks/data/: misc.py
sparks/data/allen/: gratings_pseudomouse.py  movies_pseudomouse.py  movies_singlesess.py  utils.py
sparks/data/allen/preprocess/: preprocess_gratings.py  preprocess_movies.py  utils.py
sparks/data/mec/: mec_ca.py  mec_npx.py
sparks/data/nlb/: monkey_reaching.py
sparks/models/: attention.py  controls.py  decoders.py  encoders.py  symm_attention.py  transformer.py
sparks/scripts/allen_visual/gratings/: train_allen_gratings_pseudomouse.py
sparks/scripts/allen_visual/movies/: finetune_allen_movies_multisess_prediction.py  train_allen_movies_multisess.py  train_allen_movies_pseudomouse.py
sparks/scripts/allen_visual/movies/utils/: test.py  train.py
sparks/scripts/mec/: demo.ipynb  train_mec.py  train_mec_symm.py
sparks/scripts/mec/examples/mec_prediction_ca_example/: dec_outputs_best.npy  enc_outputs_best.npy  test_loss.npy
sparks/scripts/mec/examples/mec_prediction_ca_symm_example/: dec_outputs_best.npy  enc_outputs_best.npy  test_loss.npy
sparks/scripts/mec/examples/mec_unsupervised_ca/: enc_outputs_best.npy  enc_outputs_last.npy
sparks/scripts/monkey/: demo.ipynb  monkey_reaching.py
sparks/scripts/monkey/controls/: monkey_conventional_attention.py  monkey_vae.py
sparks/scripts/monkey/example/monkey_reaching_supervised_example/: dec_outputs.npy  enc_outputs.npy  test_loss.npy
sparks/utils/: misc.py  test.py  train.py  vae.py
