[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sparks-ai"
version = "0.1.1"
authors = [
  { name="Nicolas Skatchkovsky", email="nicolas.skatchkovsky@crick.ac.uk" },
]
keywords = ["Computational neuroscience", "Artificial Intelligence", "GenAI"]
description = "Sequential Predictive Attention for the Representation of SpiKing Signals"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.9"
classifiers = ["Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent"
]

dependencies = ["scikit-learn",
    "scipy",
    "torch",
    "tqdm",
    "matplotlib",
    "numpy"]

[tool.setuptools.packages]
find = {}

[project.urls]
Homepage = "https://github.com/FrancisCrickInstitute/SPARKS"
Issues = "https://github.com/FrancisCrickInstitute/SPARKS/issues"

[project.optional-dependencies]
scripts = ["nlb_tools", "allen_sdk", "jupyter"]
